objects/FieloEE__Point__c.object
<CustomObject>
    <description>Points of each member. Points can increase after a transaction or decrease after a redemption.</description>
    <fields>
        <fullName>FieloEE__ActionDescription__c</fullName>
        <description>Detail of the action activated by the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Balance__c</fullName>
        <formula>IF ( FieloEE__Points__c &gt; 0 , FieloEE__Points__c - FieloEE__PointsUsed__c - 	FieloEE__PointsExpired__c, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationDate__c</fullName>
        <description>Expiration date for points.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberBalance__c</fullName>
        <label>Member Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <description>Member who made the transaction.</description>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointsExpired__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointsUsed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Points__c</fullName>
        <description>Quantity of points earned with the transaction.</description>
        <label>Points</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The promotion to which this point belongs.</description>
        <inlineHelpText>Here you can see the promotion that created the point.</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>FieloEE__Promotion__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Redemption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption</label>
        <referenceTo>FieloEE__Redemption__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RuleDescription__c</fullName>
        <description>Description of the rule activated by the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The rule to which this point belongs.</description>
        <inlineHelpText>Here you can see the rule that created the point.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>FieloEE__Rule__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Points</relationshipLabel>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Point</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Nombre de Point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>